update: header, auth-page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,12 +18,13 @@ body {
   background-color: var(--color-brand);
   justify-content: center;
 }
-#root {
+/* #root {
+  width: 100%;
   display: flex;
   max-width: 800px;
   padding: 32px;
   height: 100vh;
-}
+} */
 * {
   white-space: nowrap;
   overflow: hidden;
