--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,30 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --color-brand: #2ec4b6;
-  --color-blue: #007bff;
-  --color-red: #ff4d4d;
-  --color-gray: #6c757d;
-  --color-white: #ffffff;
-  --color-btn-bg: #f6f7fa;
-  --color-expense-list-bg: #f9f9f9;
+body {
+  @apply flex justify-center bg-custom-brand;
 }
 
-body {
-  display: flex;
-  background-color: var(--color-brand);
-  justify-content: center;
-}
-/* #root {
-  width: 100%;
-  display: flex;
-  max-width: 800px;
-  padding: 32px;
-  height: 100vh;
-} */
 * {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  @apply text-ellipsis whitespace-nowrap overflow-hidden;
 }
